# anthropic-sdk-rust

./: Cargo.toml
examples/: basic_client.rs  comprehensive_file_upload.rs  comprehensive_tool_use.rs  custom_auth_gateway.rs  custom_gateway_demo.rs  custom_gateway_production.rs  debug_auth_headers.rs  end_to_end_demo.rs  file_upload_comprehensive.rs  messages_api.rs  phase4_4_infrastructure.rs  phase5_1_batches.rs  phase5_2_files_api.rs  phase5_3_models_api.rs  production_patterns.rs  simple_phase4_demo.rs  streaming_example.rs  test_custom_gateway.rs  test_custom_streaming.rs  test_dual_auth.rs  tool_use_comprehensive.rs
src/: client.rs  config.rs  lib.rs
src/files/: mod.rs
src/http/: auth.rs  client.rs  mod.rs  retry.rs  streaming.rs
src/resources/: batches.rs  files.rs  messages.rs  models.rs
src/streaming/: events.rs  mod.rs
src/tokens/: mod.rs
src/tools/: conversation.rs  executor.rs  mod.rs  registry.rs
src/types/: batches.rs  errors.rs  files_api.rs  messages.rs  mod.rs  models.rs  models_api.rs  shared.rs  streaming.rs  tools.rs
src/utils/: logging.rs  mod.rs
tests/: custom_gateway_integration.rs  integration_tests.rs
