[package]
name = "anthropic-sdk-rust"
version = "0.1.4"
edition = "2021"
rust-version = "1.70"
authors = ["Sonnet 4.0 + Cursor"]
description = "Comprehensive, type-safe Rust SDK for the Anthropic API with streaming, tools, vision, files, and batch processing support"
documentation = "https://docs.rs/anthropic-sdk-rust"
homepage = "https://github.com/dimichgh/anthropic-sdk-rust"
repository = "https://github.com/dimichgh/anthropic-sdk-rust"
license = "MIT"
keywords = ["anthropic", "claude", "ai", "api", "sdk"]
categories = ["api-bindings", "web-programming::http-client", "asynchronous"]
readme = "README.md"
exclude = [
    "target/",
    ".git/",
    ".github/",
    "anthropic-sdk-typescript/",
    "infrastructure/",
    "plans/",
    "tests/custom_gateway_integration.rs",
    "*.sh",
    ".DS_Store",
    ".cursor/",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
name = "anthropic_sdk"
path = "src/lib.rs"

# Core dependencies for HTTP, JSON, async, and error handling
[dependencies]
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
futures = { version = "0.3", features = ["alloc"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
url = "2.5"
bytes = "1.5"
mime = "0.3.17"

# Streaming support dependencies
tokio-stream = { version = "0.1", features = ["sync"] }  # Async stream utilities
eventsource-stream = "0.2"  # SSE parsing
pin-project = "1.0"         # Safe pin projections

# Tool execution dependencies
async-trait = "0.1"         # Async traits for tools

# File handling dependencies
tempfile = "3.0"            # Temporary file handling
sha2 = "0.10"               # File hashing
base64 = "0.22"             # Base64 encoding/decoding

# Enhanced HTTP and retry logic
uuid = "1.0"                # Request correlation IDs
backoff = "0.4"             # Exponential backoff
tower = "0.4"               # Service layer for middleware
once_cell = "1.0"           # Global static initialization

# Date/time handling for batches
chrono = { version = "0.4", features = ["serde"] }

# Optional cloud integrations (to be implemented in Phase 6)
[features]
default = []
# bedrock = ["aws-sdk-bedrock"]
# vertex = ["gcp-vertex-ai"]  
# all = ["bedrock", "vertex"]

# [dependencies.aws-sdk-bedrock]
# version = "1.0"
# optional = true

# [dependencies.gcp-vertex-ai]
# version = "0.1"
# optional = true

[dev-dependencies]
tokio-test = "0.4"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
chrono = "0.4"              # For time tool example 
